# Search_Engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  answers.json  config.json  search_engine_test.cc
